# pco_lab04

./: CMakeLists.txt  pco_rendu.sh
QtrainSim/: CMakeLists.txt
QtrainSim/src/: general.h  mainwindow.cpp
code/: CMakeLists.txt
code/prog1/: CMakeLists.txt
code/prog1/src/: cppmain.cpp  launchable.h  locomotive.cpp  locomotive.h  locomotivebehavior.cpp  locomotivebehavior.h  sharedsection.h  sharedsectioninterface.h  sharedstation.cpp  sharedstation.h
code/prog2/: CMakeLists.txt
code/prog2/src/: cppmain.cpp  launchable.h  locomotive.cpp  locomotive.h  locomotivebehavior.cpp  locomotivebehavior.h  sharedsection.h  sharedsectioninterface.h  sharedstation.cpp  sharedstation.h
code/src/: ambulance.cpp  ambulance.h  clinic.cpp  clinic.h  hospital.cpp  hospital.h  mainwindow.cpp  seller.cpp  seller.h  supplier.cpp  supplier.h  tests_main.cpp  utils.cpp
code/src/internal/: costs.h  display.cpp  display.h  fakeinterface.h  iwindowinterface.h  main.cpp  mainwindow.cpp  mainwindow.h  utils.h  windowinterface.cpp  windowinterface.h
